added folder ui

--- a/preset.html
+++ b/preset.html
@@ -47,9 +47,17 @@
   <!-- Main content area -->
   <div id="page-content">
     <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
+      <!-- Pedalboard selection -->
       <select id="pedalboardSelect"></select>
-      <!-- <select id="presetSelect" style="margin-left: 16px;"></select> -->
-       <div id="presetSelectContainer" style="margin-left: 16px;">
+      <!-- Folder selection -->
+      <div id="folderSelectContainer" style="margin-left: 16px; display: flex; align-items: center; gap: 4px;">
+        <select id="folderSelect">
+          <option value="">-- Select Folder --</option>
+        </select>
+        <button id="addFolderBtn" class="bx--btn bx--btn--secondary bx--btn--sm" type="button">+ Folder</button>
+      </div>
+      <!-- Preset selection -->
+      <div id="presetSelectContainer" style="margin-left: 16px;">
         <select id="presetSelect"></select>
         <div id="presetSelectLoader" class="bx--inline-loading" style="display:none;" aria-live="assertive" role="alert">
           <div class="bx--inline-loading__animation">
@@ -67,54 +75,33 @@
       <button id="renamePresetBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
     </div>
 
-    <div class="zoom-controls" style="position: fixed; bottom: 20px; right: 20px; display: flex; gap: 8px; z-index: 9999;">
-      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
-      <svg
-        focusable="false"
-        preserveAspectRatio="xMidYMid meet"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        width="16"
-        height="16"
-        viewBox="0 0 32 32"
-        aria-hidden="true"
-        class="bx--btn__icon">
-        <path d="M18 12L14 12 14 8 12 8 12 12 8 12 8 14 12 14 12 18 14 18 14 14 18 14 18 12z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
-      </svg>
-      </button>
-      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomOut()">
-      <svg
-        focusable="false"
-        preserveAspectRatio="xMidYMid meet"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        width="16"
-        height="16"
-        viewBox="0 0 32 32"
-        aria-hidden="true"
-        class="bx--btn__icon">
-      <path d="M8 12H18V14H8z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>      </svg>
-      </button>
-      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="resetZoom()">
-      <svg
-        focusable="false"
-        preserveAspectRatio="xMidYMid meet"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        width="16"
-        height="16"
-        viewBox="0 0 32 32"
-        aria-hidden="true"
-        class="bx--btn__icon">
-        <path d="M22.4478,21A10.855,10.855,0,0,0,25,14,10.99,10.99,0,0,0,6,6.4658V2H4v8h8V8H7.332a8.9768,8.9768,0,1,1-2.1,8H3.1912A11.0118,11.0118,0,0,0,14,25a10.855,10.855,0,0,0,7-2.5522L28.5859,30,30,28.5859Z"/>
-      </svg>
-      </button>
-    </div>
-
     <br><br><br><br>
 
     <div id="preset"></div>
   </div>
+
+
+
+    <div class="zoom-controls" style="position: fixed; bottom: 20px; right: 20px; display: flex; gap: 8px; z-index: 9999;">
+      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M18 12L14 12 14 8 12 8 12 12 8 12 8 14 12 14 12 18 14 18 14 14 18 14 18 12z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
+        </svg>
+      </button>
+      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomOut()">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M8 12H18V14H8z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
+        </svg>
+      </button>
+      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="resetZoom()">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M22.4478,21A10.855,10.855,0,0,0,25,14,10.99,10.99,0,0,0,6,6.4658V2H4v8h8V8H7.332a8.9768,8.9768,0,1,1-2.1,8H3.1912A11.0118,11.0118,0,0,0,14,25a10.855,10.855,0,0,0,7-2.5522L28.5859,30,30,28.5859Z"/>
+        </svg>
+      </button>
+    </div>
+
+
+
 
   <!-- Fallback content -->
   <div id="noPedalboardsContainer" style="display: none; text-align: center; margin-top: 7em;">
