--- a/pedalboard.html
+++ b/pedalboard.html
@@ -25,7 +25,7 @@
     <div id="pedalAddDropdownContainer"></div>
       <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px;">
         <select id="pedalboardSelect"></select>
-        <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
+        <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit
           <svg
             focusable="false"
             preserveAspectRatio="xMidYMid meet"
@@ -37,7 +37,8 @@
             aria-hidden="true"
             class="bx--btn__icon">
             <path d="M3,10V22a2.002,2.002,0,0,0,2,2H27a2.0023,2.0023,0,0,0,2-2V10a2.0027,2.0027,0,0,0-2-2H5A2.0023,2.0023,0,0,0,3,10Zm2,0,2,0V22H5ZM27,22H9V10H27Z"/>
-          </svg>          
+          </svg>   
+        </button>       
       </div>
 
         <!-- <button
