--- a/preset.html
+++ b/preset.html
@@ -149,6 +149,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="utils.js"></script>
   <script src="preset.js"></script>
+  <script src="folder.js"></script>
   <script src="fullscreen-menu.js"></script>
   <script src="nav-preset.js"></script>
   <script src="zoom-preset.js"></script>
