--- a/preset.html
+++ b/preset.html
@@ -301,6 +301,13 @@ function hidePresetLoader() {
 </script>
 
 
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    carbonComponents.watch();  // initialize all Carbon components on the page
+  });
+</script>
+
+
 
 
 
