--- a/preset.html
+++ b/preset.html
@@ -303,7 +303,7 @@ function hidePresetLoader() {
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-    carbonComponents.watch();  // initialize all Carbon components on the page
+    CarbonComponents.watch(); // activate all Carbon UI widgets
   });
 </script>
 
