--- a/preset.html
+++ b/preset.html
@@ -6,6 +6,7 @@
   <title>PedalPlex</title>
   <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
   <link rel="stylesheet" href="style.css" />
+  <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <style>
   .btn-disabled {
