--- a/preset.html
+++ b/preset.html
@@ -310,7 +310,28 @@ function hidePresetLoader() {
   document.addEventListener("DOMContentLoaded", function() {
     CarbonComponents.watch(); // activate all Carbon UI widgets
   });
+
+
+  const menuButton = document.getElementById('presetMenuButton');
+  const menu = menuButton.nextElementSibling;
+
+  menuButton.addEventListener('click', () => {
+    const isOpen = menu.style.display === 'block';
+    menu.style.display = isOpen ? 'none' : 'block';
+    menuButton.setAttribute('aria-expanded', !isOpen);
+  });
+
+  // Close when clicking outside
+  document.addEventListener('click', (e) => {
+    if (!menu.contains(e.target) && !menuButton.contains(e.target)) {
+      menu.style.display = 'none';
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+
 </script>
+
 
 
 
