--- a/preset.html
+++ b/preset.html
@@ -115,8 +115,8 @@
       <div class="bx--btn-set">
         <!-- Menu Button -->
         <div class="bx--overflow-menu" data-overflow-menu>
-          <button class="bx--btn bx--btn--tertiary" type="button" aria-haspopup="true" aria-expanded="false">
-            Actions
+          <button class="bx--btn bx--btn--secondary" type="button" aria-haspopup="true" aria-expanded="false">
+            Edit
             <svg focusable="false" preserveAspectRatio="xMidYMid meet"
                 xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                 width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
@@ -127,10 +127,10 @@
           <!-- Menu Items -->
           <ul class="bx--overflow-menu-options" role="menu" aria-label="Preset/Folder actions">
             <li class="bx--overflow-menu-options__option" role="menuitem">
-              <button id="renameFolderBtn" class="bx--btn bx--btn--ghost bx--btn--sm" type="button">Rename Folder</button>
+              <span id="renameFolderBtn">Rename Folder</span>
             </li>
             <li class="bx--overflow-menu-options__option" role="menuitem">
-              <button id="renamePresetBtn" class="bx--btn bx--btn--ghost bx--btn--sm" type="button">Rename Preset</button>
+              <span id="renamePresetBtn">Rename Preset</span>
             </li>
           </ul>
         </div>
