--- a/preset.html
+++ b/preset.html
@@ -66,7 +66,7 @@
           <p data-inline-loading-text-active class="bx--inline-loading__text">Loading folders...</p>
         </div>
       </div>
-      <!-- <button id="renameFolderBtn" class="bx--btn bx--btn--secondary" type="button">Edit
+      <button id="renameFolderBtn" class="bx--btn bx--btn--secondary" type="button">Edit
         <svg
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
@@ -79,7 +79,7 @@
           class="bx--btn__icon">
           <path d="M11.17,6l3.42,3.41.58.59H28V26H4V6h7.17m0-2H4A2,2,0,0,0,2,6V26a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2H16L12.59,4.59A2,2,0,0,0,11.17,4Z"/>
         </svg>
-      </button>-->
+      </button>
 
       <!-- Preset selection -->
       <div id="presetSelectContainer" style="margin-left: 8px;">
@@ -109,32 +109,15 @@
           class="bx--btn__icon">
           <path d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"/>
         </svg>
-      </button>-->
+      </button> -->
+      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" id="renamePresetBtn"">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M31.707 19.2929l-3-3c-.3906-.3906-1.0234-.3906-1.4141 0l-9.293 9.293v4.4141h4.4141l9.293-9.293c.3906-.3906.3906-1.0234 0-1.4141zm-10.1211 8.707h-1.5859v-1.5859l5-5 1.5859 1.5859-5 5zm6.4141-6.4141l-1.5859-1.5859 1.5859-1.5859 1.5859 1.5859-1.5859 1.5859zM16 22c-3.3643 0-6-2.6357-6-6s2.6357-6 6-6 6 2.6357 6 6-2.6357 6-6 6zm0-10c-2.2803 0-4 1.7197-4 4s1.7197 4 4 4 4-1.7197 4-4-1.7197-4-4-4z"></path>
+          <path d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"></path>
+        </svg>
+      </button>
 
 
-      <div class="bx--btn-set">
-        <!-- Menu Button -->
-        <div class="bx--overflow-menu" data-overflow-menu>
-          <button class="bx--btn bx--btn--secondary" type="button" aria-haspopup="true" aria-expanded="false">
-            Edit
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet"
-                xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-              <path d="M8 12 L16 20 L24 12 Z"></path> <!-- chevron down -->
-            </svg>
-          </button>
-
-          <!-- Menu Items -->
-          <ul class="bx--overflow-menu-options" role="menu" aria-label="Preset/Folder actions">
-            <li class="bx--overflow-menu-options__option" role="menuitem">
-              <span id="renameFolderBtn">Rename Folder</span>
-            </li>
-            <li class="bx--overflow-menu-options__option" role="menuitem">
-              <span id="renamePresetBtn">Rename Preset</span>
-            </li>
-          </ul>
-        </div>
-      </div>
 
 
 
