--- a/preset.html
+++ b/preset.html
@@ -96,7 +96,7 @@
           <p data-inline-loading-text-active class="bx--inline-loading__text">Loading presets...</p>
         </div>
       </div>
-      <!-- <button id="renamePresetBtn" class="bx--btn bx--btn--secondary" type="button">Edit
+      <button id="renamePresetBtn" class="bx--btn bx--btn--secondary" type="button">Edit
         <svg
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
@@ -109,19 +109,7 @@
           class="bx--btn__icon">
           <path d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"/>
         </svg>
-      </button> -->
-      <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" id="renamePresetBtn">
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-          <path d="M29.71,11.29l-3-3a1,1,0,0,0-1.42,0L16,17.59V22h4.41l9.3-9.29A1,1,0,0,0,29.71,11.29ZM19.59,20H18V18.41l5-5L24.59,15ZM26,13.59,24.41,12,26,10.41,27.59,12Z"></path>
-          <path d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"></path>
-        </svg>
       </button>
-
-
-
-
-
-
 
     </div>
 
