control buttons styling update

--- a/create.html
+++ b/create.html
@@ -324,9 +324,9 @@
 
         <br>
         <div class="ctrl-actions">
-            <button class="bx--btn bx--btn--sm bx--btn--secondary move-up">↑</button>
-            <button class="bx--btn bx--btn--sm bx--btn--secondary move-down">↓</button>
-            <button class="bx--btn bx--btn--sm bx--btn--danger remove">✕</button>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+            <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
         </div>
         </div>
         </script>
@@ -363,9 +363,9 @@
 
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-up">↑</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-down">↓</button>
-    <button class="bx--btn bx--btn--sm bx--btn--danger remove">✕</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
 </script>
@@ -428,9 +428,9 @@ $("#add-led").on("click", addLedControl);
   <label>Value <input type="number" class="ctrl-num ctrl-value" value="0"></label>
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-up">↑</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-down">↓</button>
-    <button class="bx--btn bx--btn--sm bx--btn--danger remove">✕</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
 </script>
@@ -455,9 +455,9 @@ $("#add-led").on("click", addLedControl);
   <label>Text <input type="text" class="ctrl-text" value="LCD"></label>
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-up">↑</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-down">↓</button>
-    <button class="bx--btn bx--btn--sm bx--btn--danger remove">✕</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
 </script>
@@ -484,9 +484,9 @@ $("#add-led").on("click", addLedControl);
   <label>Selected <input type="text" class="ctrl-num ctrl-value" value="A"></label>
   <br>
   <div class="ctrl-actions">
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-up">↑</button>
-    <button class="bx--btn bx--btn--sm bx--btn--secondary move-down">↓</button>
-    <button class="bx--btn bx--btn--sm bx--btn--danger remove">✕</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
+    <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+    <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
   </div>
 </div>
 </script>
