--- a/create.html
+++ b/create.html
@@ -76,9 +76,10 @@
                 <input type="hidden" id="pedal-author" />
                 <input type="hidden" id="pedal-author-id" />
 
-                <label>ID <input type="text" class="create-gear-input" id="pedal-id" placeholder="Insert unique gear ID..."></label>
-                <label>Name <input type="text" class="create-gear-input" id="pedal-name" placeholder="Insert gear name..."></label>
-                <label>Logo style <input type="text" class="create-gear-input" id="pedal-logo" placeholder="Set valid CSS..."></label>
+                <label>ID <input type="text" class="create-gear-input" id="pedal-id" placeholder="Insert unique gear ID (e.g. 
+Boss Distortion DS-1)..."></label>
+                <label>Name <input type="text" class="create-gear-input" id="pedal-name" placeholder="Insert gear name to be displayed as logo..."></label>
+                <label>Logo style <input type="text" class="create-gear-input" id="pedal-logo" placeholder="Set valid CSS to style the logo..."></label>
                 </div>
                 <br><br>
                 <label>Type <select id="pedal-type">
