--- a/create.html
+++ b/create.html
@@ -6,65 +6,63 @@
     <title>Pedal Builder</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js" integrity="sha512-n3df8aRbsNmj4UdlW1HKzAtnR2VXz+nTAPwrW1/9YyOgtnWZ1+S2Q1v9ojPO2anbSBLB6P2j1Lq6U3B65Q0V7w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"
+        integrity="sha512-n3df8aRbsNmj4UdlW1HKzAtnR2VXz+nTAPwrW1/9YyOgtnWZ1+S2Q1v9ojPO2anbSBLB6P2j1Lq6U3B65Q0V7w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
     <link rel="stylesheet" href="style.css">
     <script src="utils.js"></script>
     <script src="create.js"></script>
+    
     <style>
+        /* Layout: left editor + fixed right preview */
+        #builder {
+        display: flex;
+        align-items: flex-start;
+        }
 
-/* Layout: left editor + fixed right preview */
-#builder {
-  display: flex;
-  align-items: flex-start;
-}
+        /* Editor (left side) */
+        #editor {
+        flex: 1;
+        padding: 20px;
+        margin-right: 40%; /* reserve space so it never overlaps preview */
+        }
 
-/* Editor (left side) */
-#editor {
-  flex: 1;
-  padding: 20px;
-  margin-right: 40%; /* reserve space so it never overlaps preview */
-}
+        /* Preview (fixed right side) */
+        #preview {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        bottom: 20px;
+        width: 35%;          /* fixed width */
+        overflow: auto;
+        padding: 15px;
+        border: solid 1px #fff;
+        border-radius: 8px;
+        z-index: 10;
+        }
 
-/* Preview (fixed right side) */
-#preview {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  bottom: 20px;
-  width: 35%;          /* fixed width */
-  overflow: auto;
-  padding: 15px;
-  border: solid 1px #fff;
-  border-radius: 8px;
-  z-index: 10;
-}
+        /* Controls container stacks rows */
+        #controls {
+        display: flex;
+        flex-direction: column;
+        gap: 15px; /* space between rows */
+        }
 
-/* Controls container stacks rows */
-#controls {
-  display: flex;
-  flex-direction: column;
-  gap: 15px; /* space between rows */
-}
+        /* Each row scrolls horizontally */
+        .controls-row {
+        display: flex;
+        gap: 10px;
+        overflow-x: auto;      /* horizontal scroll per row */
+        white-space: nowrap;   /* keep row on one line */
+        padding-bottom: 5px;   /* space for scrollbar */
+        }
 
-/* ✅ Each row scrolls horizontally */
-.controls-row {
-  display: flex;
-  gap: 10px;
-  overflow-x: auto;      /* horizontal scroll per row */
-  white-space: nowrap;   /* keep row on one line */
-  padding-bottom: 5px;   /* space for scrollbar */
-}
-
-/* Controls inside row don’t shrink */
-.controls-row .control {
-  flex-shrink: 0;
-}
-
-
-
-
+        /* Controls inside row don’t shrink */
+        .controls-row .control {
+        flex-shrink: 0;
+        }
     </style>
+
 </head>
 
 <body>
