--- a/create.html
+++ b/create.html
@@ -6,9 +6,7 @@
     <title>Pedal Builder</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"
-        integrity="sha512-n3df8aRbsNmj4UdlW1HKzAtnR2VXz+nTAPwrW1/9YyOgtnWZ1+S2Q1v9ojPO2anbSBLB6P2j1Lq6U3B65Q0V7w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="style.css">
     <script src="utils.js"></script>
     <script src="create.js"></script>
