--- a/create.html
+++ b/create.html
@@ -162,7 +162,7 @@
 
             <label>Status</label>
             <div id="pedal-published-wrapper" class="custom-dropdown">
-            <button class="bx--btn bx--btn--sm bx--btn--secondary" style="width:19px!important;" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary" style="color:#ffffff" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
             <ul id="pedal-published-options" class="dropdown-options"><br>
                 <li style="cursor:pointer;" data-value="draft">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
