--- a/create.html
+++ b/create.html
@@ -152,7 +152,7 @@
 
                 <br><br><br><hr></br><br>
                 
-                <button class="bx--btn bx--btn--sm bx--btn--primary" id="add-row">+ Add Control Row</button><br><br>
+                <button class="bx--btn bx--btn--sm bx--btn--primary" id="add-row" style="color:#ffffff">+ Add Control Row</button><br><br>
                 <div id="controls"></div>
         </div>
 
@@ -163,27 +163,27 @@
             <label>Status</label>
             <div id="pedal-published-wrapper" class="custom-dropdown">
             <button class="bx--btn bx--btn--sm bx--btn--secondary" style="color:#ffffff" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
-            <ul id="pedal-published-options" class="dropdown-options"><br>
+            <ul id="pedal-published-options" style="font-size:14px" class="dropdown-options"><br>
                 <li style="cursor:pointer;" data-value="draft">
-                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="12" height="12" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Draft
                 </li>
                 <li style="cursor:pointer;" data-value="private">
-                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="12" height="12" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Private
                 </li>
                 <li style="cursor:pointer;" data-value="reviewing">
-                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="12" height="12" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Reviewing
                 </li>
                 <li style="cursor:pointer;" data-value="public">
-                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="12" height="12" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Public
@@ -321,8 +321,8 @@
 
         <br>
         <div class="ctrl-actions">
-            <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up">←</button>
-            <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down">→</button>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-up" style="color:#ffffff">←</button>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only move-down" style="color:#ffffff">→</button>
             <button class="bx--btn bx--btn--sm bx--btn--danger bx--btn--icon-only remove">✕</button>
         </div>
         </div>
@@ -594,8 +594,8 @@ $("#add-led").on("click", addLedControl);
                         </div>
                         <div class="controls-row" style="display:flex; gap:10px; flex-wrap:nowrap;"></div>
                         <div class="row-actions" style="display:flex; flex-wrap:nowrap;">
-                        <button class="bx--btn bx--btn--sm bx--btn--secondary row-up">↑ Row</button><br>
-                        <button class="bx--btn bx--btn--sm bx--btn--secondary row-down">↓ Row</button><br>
+                        <button class="bx--btn bx--btn--sm bx--btn--secondary row-up" style="color:#ffffff">↑ Row</button><br>
+                        <button class="bx--btn bx--btn--sm bx--btn--secondary row-down" style="color:#ffffff">↓ Row</button><br>
                         <button class="bx--btn bx--btn--sm bx--btn--danger row-remove">✕ Remove Row</button>
                         </div>
                         <hr style="width:50%; position:relative; left:-33px;"><br>
